feat: authentication module
